--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.2.0",
+    "@astrojs/mdx": "^1.1.5",
     "@astrojs/rss": "^3.0.0",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^3.1.3",
