--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "astro-eslint-parser": "^0.15.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "0.19.8",
     "eslint": "^8.50.0",
     "eslint-plugin-astro": "^0.29.0",
     "husky": "^8.0.3",
