--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "satori": "^0.10.8",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
