--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.2.0",
-    "@astrojs/mdx": "^1.1.5",
-    "@astrojs/rss": "^3.0.0",
+    "@astrojs/check": "^0.3.2",
+    "@astrojs/mdx": "^2.0.1",
+    "@astrojs/rss": "^4.0.1",
     "@resvg/resvg-js": "^2.4.1",
-    "astro": "^3.1.3",
+    "astro": "^4.0.4",
     "astro-social-share": "^1.2.1",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
@@ -32,9 +32,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.0.2",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/react": "^3.0.7",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.3",
     "@divriots/jampack": "^0.20.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
@@ -47,6 +47,8 @@
     "eslint-plugin-astro": "^0.29.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^12.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-tailwindcss": "^0.5.4",
