--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.2",
-    "@astrojs/mdx": "^2.0.1",
+    "@astrojs/prism": "^3.0.0",
     "@astrojs/rss": "^4.0.1",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^4.0.4",
@@ -32,6 +32,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@astrojs/mdx": "^2.1.1",
     "@astrojs/react": "^3.0.7",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.3",
@@ -40,7 +41,9 @@
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.22",
     "@typescript-eslint/parser": "^6.7.3",
+    "astro-auto-import": "^0.4.2",
     "astro-eslint-parser": "^0.15.0",
+    "astro-mdx-code-blocks": "^0.0.6",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.50.0",
